# hdn-ringmod

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: NoteNames.h  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: HalfbandDecimator.h  Oscillator.cpp  Oscillator.h  PitchSmoother.h  YinPitchDetector.cpp  YinPitchDetector.h
tests/: CMakeLists.txt  TestOscillator.cpp  TestParameters.cpp  TestPitchSmoother.cpp  TestYinPitchDetector.cpp
